2011-08-28 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c:
	  applied patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0,
	  thanks Roy Rankin

2011-08-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  support/regression/tests/bool.c:
	  Fixed bug #3031197.

2011-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c,
	* src/ds390/gen.c: synced all shift functions

2011-08-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c: use !tlabeldef and #!constbyte,
	  merged Push into emitpush,
	  changed many aopGet(dname=TRUE) to FALSE
	  (aopForRemat): do not warn for intermediate generic pointers,
	  (aopPut): use static dbuf_s,
	  (loadDptrFromOperand): optimized for AOP_DPTR,
	  (pointToEnd, findLabelBackwards, old adjustArithmeticResult): removed,
	* src/mcs51/gen.h: cosmetics
	* src/ds390/gen.c: synchronized with mcs51, removed genArrayInit
	* src/ds390/gen.h: cosmetics
	* src/SDCCcse.c (algebraicOpts CAST): handle generic pointers
	* src/SDCCglue.c (aopLiteralLong): handle size=3 for ds390 dptr,
	  (initPointer): no warning for castable pointers
	* src/SDCCicode.c (operandOperation EQ_OP): handle literal pointers,
	  (getPtrType): removed
	  (geniCodeCast): removed strange hidden cast after cse fix
	  (geniCodeAddressOf): removed op->isaddr check for operandFromOperand
	* src/z80/gen.c (aopForRemat): synced with mcs51 for CAST,
	  (regMove): fixed warnings
	* support/regression/tests/bug3389647.c: new, added

2011-08-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3397636.c:
	  Fixed bug #3397636.

2011-08-25 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/pcodepeep.c, src/pic16/pcodepeep.c:
	  fixed name clash with mingw_w64: _DLL renamed to DLList
	* src/SDCCutil.c: added MINGW64 build environment detection